# bigquery-cosmos-sync-job

./: .env.example  .gitignore  README.md  azure.yaml  docker-compose.yml
.github/: copilot-instructions.md
.github/instructions/: coding-standards.instructions.md  documentation.instructions.md  py_bestpractice.instructions.md  py_models.instructions.md  py_testing.instructions.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SETUP.md  TROUBLESHOOTING.md  data-model.md  decisions.md  deployment.md  extending.md  identity.md  networking.md  observability.md
examples/wif/: README.md  bq_smoke.py
examples/wif/terraform/: main.tf
infra/: main.tf  main.tfvars.example  outputs.tf  variables.tf
infra/modules/action-group/: main.tf
infra/modules/container-app-job/: main.tf
infra/modules/container-apps-environment/: main.tf
infra/modules/container-registry/: main.tf
infra/modules/cosmos-db/: main.tf
infra/modules/key-vault/: main.tf
infra/modules/monitor-alerts/: main.tf
notebooks/: README.md
notebooks/bigquery/: 01_setup_dataset.ipynb  02_seed_data.ipynb  03_validate.ipynb
notebooks/cosmosdb/: 01_inspect_containers.ipynb  02_sync_metadata.ipynb
py/: pyproject.toml
py/apps/bq-cosmos-sync/: .dockerignore  Dockerfile  README.md  pyproject.toml
py/apps/bq-cosmos-sync/src/bq_cosmos_sync/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  logging.py  models.py  runner.py  telemetry.py
py/apps/bq-cosmos-sync/src/bq_cosmos_sync/cosmos/: __init__.py  writer.py
py/apps/bq-cosmos-sync/src/bq_cosmos_sync/pipelines/: __init__.py  base.py  courses.py  learners.py  recommendations.py  registry.py
py/apps/bq-cosmos-sync/tests/: conftest.py  fakes.py  test_checkpoint.py  test_config.py  test_pipelines.py  test_runner.py
py/libs/bigquerykit/: README.md  pyproject.toml
py/libs/bigquerykit/src/ms/fde/bigquerykit/: __init__.py  client.py  credentials.py  dataset.py  errors.py  query.py  retry.py
py/libs/bigquerykit/tests/: conftest.py  fakes.py  test_credentials.py  test_dataset.py  test_errors.py  test_query.py  test_retry.py
py/libs/cosmosdbkit/: README.md  pyproject.toml
py/libs/cosmosdbkit/src/ms/fde/cosmosdbkit/: __init__.py  client.py  container.py  credentials.py  errors.py  query.py  retry.py
py/libs/cosmosdbkit/tests/: conftest.py  fakes.py  test_client.py  test_container.py  test_credentials.py  test_errors.py  test_integration.py  test_query.py  test_retry.py
