[project]
name = "bigquery-cosmos-sync-workspace"
version = "0.1.0"
description = "Workspace for the BigQuery -> Cosmos DB sync job"
requires-python = "==3.12.*"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/bq-cosmos-sync",
    "libs/bigquerykit",
    "libs/cosmosdbkit",
]

[tool.uv]
package = false
