[project]
name = "bq-cosmos-sync"
version = "0.1.0"
description = "Scheduled BigQuery -> Azure Cosmos DB (NoSQL) sync, runs as an Azure Container App Job."
requires-python = "==3.12.*"
dependencies = [
    "azure-cosmos>=4.9.0",
    "azure-identity>=1.21.0",
    "azure-monitor-opentelemetry>=1.6.0",
    "ms-fde-bigquerykit",
    "ms-fde-cosmosdbkit",
    "opentelemetry-api>=1.33.0",
    "opentelemetry-sdk>=1.33.0",
    "opentelemetry-instrumentation-logging>=0.54b0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "tenacity>=9.0.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]
notebooks = [
    "db-dtypes>=1.3.0",
    "faker>=30.0.0",
    "jupyterlab>=4.2.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bq_cosmos_sync"
module-root = "src"

[tool.uv.sources]
ms-fde-bigquerykit = { workspace = true }
ms-fde-cosmosdbkit = { workspace = true }

[tool.pyright]
pythonVersion = "3.12"
extraPaths = ["src"]
reportMissingImports = "warning"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "BLE", "C4", "PIE", "PT", "SIM", "TCH", "RUF"]
ignore = ["S101", "B008", "TC001", "TC002", "TC003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "BLE"]
"src/bq_cosmos_sync/pipelines/**" = ["S608"]

[project.scripts]
bq-cosmos-sync = "bq_cosmos_sync.cli:app"
